--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             margin: 0 20px;
             font-size: 22px;
         }
-        section {
+        .content {
             padding: 70px 20px;
             text-align: center;
         }
-        section h2 {
+        .content h2 {
             color: #00bfff;
             font-size: 40px;
             margin-bottom: 30px;
         }
-        section p {
-            font-size: 20px;
+        .content p {
+            font-size: 22px;
             line-height: 1.6;
             margin-bottom: 30px;
         }
@@ -74,11 +74,11 @@
             border-radius: 10px;
             position: absolute;
         }
-        .image1 { top: 20%; left: 10%; }
+        .image1 { top: 10%; left: 10%; }
         .image2 { top: 50%; left: 60%; }
-        .image3 { top: 10%; right: 10%; }
-        .image4 { top: 60%; right: 20%; }
-        .image5 { top: 30%; left: 70%; }
+        .image3 { top: 20%; right: 20%; }
+        .image4 { top: 60%; right: 10%; }
+        .image5 { top: 40%; left: 70%; }
         footer {
             background-color: #1a1a1a;
             color: #fff;
@@ -91,37 +91,21 @@
     <header>
         <h1>Your Brand Name</h1>
         <nav>
-            <a href="#section1">Home</a>
-            <a href="#section2">About</a>
-            <a href="#section3">Services</a>
-            <a href="#section4">Work Examples</a>
-            <a href="#section5">Contact</a>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Work Examples</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
 
-    <section id="section1">
+    <div class="content">
         <h2>Welcome to Our Brand</h2>
-        <p>We help businesses scale with innovative marketing strategies and stunning design. Let us transform your brand into something extraordinary that captivates your audience and drives growth.</p>
-    </section>
+        <p>We specialize in scaling brands with innovative marketing strategies and design that captivates. Our mission is to help your business grow and reach its full potential through powerful branding and marketing.</p>
 
-    <section id="section2">
-        <h2>About Us</h2>
-        <p>Our team consists of passionate experts who specialize in scaling brands through tailored marketing campaigns and exceptional design. We take pride in our ability to generate results and provide creative solutions to businesses of all sizes.</p>
-    </section>
-
-    <section id="section3">
         <h2>Our Services</h2>
-        <p>We offer a range of services to help your business grow:</p>
-        <ul style="font-size: 22px; text-align: left; margin-left: 30px;">
-            <li>Social Media Marketing</li>
-            <li>Website Design & Development</li>
-            <li>Brand Strategy & Consulting</li>
-            <li>Paid Advertising Campaigns</li>
-            <li>Content Creation</li>
-        </ul>
-    </section>
+        <p>From social media marketing to web design, we offer a full range of services tailored to your brand’s needs. Whether you're looking to increase visibility or drive conversions, we’ve got you covered.</p>
 
-    <section id="section4">
         <h2>Work Examples</h2>
         <div class="images-container">
             <img src="example1.jpg" alt="Work Example 1" class="image1">
@@ -130,14 +114,12 @@
             <img src="example4.jpg" alt="Work Example 4" class="image4">
             <img src="example5.jpg" alt="Work Example 5" class="image5">
         </div>
-    </section>
 
-    <section id="section5">
         <h2>Contact Us</h2>
-        <p>Are you ready to take your brand to the next level? Let’s work together and make it happen. Contact us today and let's discuss how we can help you grow!</p>
+        <p>If you're ready to take your brand to the next level, let’s chat! Click the button below to schedule a call or send us a message on Instagram to get started.</p>
         <button class="cta-btn" onclick="window.location.href='https://calendly.com/your-link'">Schedule a Call</button>
         <button class="cta-btn-instagram" onclick="window.location.href='https://instagram.com/your-username'">Message Us on Instagram</button>
-    </section>
+    </div>
 
     <footer>
         <p>&copy; 2025 Your Brand Name. All rights reserved.</p>
