--- a/index.html
+++ b/index.html
@@ -1,128 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Brand</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #0a0a0a;
-            color: #fff;
-        }
-        header {
-            background-color: #1a1a1a;
-            padding: 30px;
-            text-align: center;
-        }
-        header h1 {
-            color: #00bfff;
-            font-size: 50px;
-        }
-        nav a {
-            color: #00bfff;
-            text-decoration: none;
-            margin: 0 20px;
-            font-size: 22px;
-        }
-        .content {
-            padding: 70px 20px;
-            text-align: center;
-        }
-        .content h2 {
-            color: #00bfff;
-            font-size: 40px;
-            margin-bottom: 30px;
-        }
-        .content p {
-            font-size: 22px;
-            line-height: 1.6;
-            margin-bottom: 30px;
-        }
-        .cta-btn {
-            background-color: #00bfff;
-            color: #000;
-            padding: 20px 40px;
-            border: none;
-            border-radius: 5px;
-            font-size: 22px;
-            cursor: pointer;
-            margin: 20px;
-        }
-        .cta-btn:hover {
-            background-color: #008cba;
-        }
-        .cta-btn-instagram {
-            background-color: #ff1493;
-            color: #000;
-            padding: 20px 40px;
-            border: none;
-            border-radius: 5px;
-            font-size: 22px;
-            cursor: pointer;
-            margin: 20px;
-        }
-        .cta-btn-instagram:hover {
-            background-color: #ff3385;
-        }
-        .images-container img {
-            width: 250px;
-            height: 250px;
-            object-fit: cover;
-            border-radius: 10px;
-            position: absolute;
-        }
-        .image1 { top: 10%; left: 10%; }
-        .image2 { top: 50%; left: 60%; }
-        .image3 { top: 20%; right: 20%; }
-        .image4 { top: 60%; right: 10%; }
-        .image5 { top: 40%; left: 70%; }
-        footer {
-            background-color: #1a1a1a;
-            color: #fff;
-            text-align: center;
-            padding: 30px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Brand Scaling Services</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #0a0a0a;
+      color: white;
+    }
+    header {
+      background-color: #0a0a0a;
+      color: white;
+      text-align: center;
+      padding: 50px;
+    }
+    h1 {
+      font-size: 2.5em;
+    }
+    .intro-section {
+      padding: 40px;
+      background-color: #1a1a1a;
+    }
+    .intro-section h2 {
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+    .intro-section p {
+      font-size: 1.2em;
+      line-height: 1.6;
+    }
+    .advantage-section {
+      background-color: #2a2a2a;
+      padding: 40px;
+    }
+    .advantage-section h2 {
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+    .advantage-section ul {
+      list-style: none;
+      padding: 0;
+    }
+    .advantage-section li {
+      font-size: 1.2em;
+      margin-bottom: 10px;
+    }
+    .image-gallery {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      margin: 20px 0;
+    }
+    .image-gallery img {
+      max-width: 45%;
+      margin: 10px 0;
+    }
+    .cta-section {
+      background-color: #0a0a0a;
+      padding: 40px;
+      text-align: center;
+    }
+    .cta-section a {
+      background-color: #ff66b2;
+      color: white;
+      padding: 15px 30px;
+      text-decoration: none;
+      font-size: 1.5em;
+      border-radius: 5px;
+    }
+    .cta-section a:hover {
+      background-color: #e60099;
+    }
+    .schedule-call, .instagram-button {
+      display: inline-block;
+      margin: 10px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Your Brand Name</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Work Examples</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
 
-    <div class="content">
-        <h2>Welcome to Our Brand</h2>
-        <p>We specialize in scaling brands with innovative marketing strategies and design that captivates. Our mission is to help your business grow and reach its full potential through powerful branding and marketing.</p>
+<header>
+  <h1>Welcome to My Brand Scaling Services</h1>
+  <p>Helping businesses grow through Facebook Ads and more</p>
+</header>
 
-        <h2>Our Services</h2>
-        <p>From social media marketing to web design, we offer a full range of services tailored to your brand’s needs. Whether you're looking to increase visibility or drive conversions, we’ve got you covered.</p>
+<section class="intro-section">
+  <h2>What I Do</h2>
+  <p>I specialize in helping clothing brands grow and scale their presence through targeted Facebook ads. I focus on creating effective campaigns that increase brand visibility, drive traffic, and boost sales.</p>
+</section>
 
-        <h2>Work Examples</h2>
-        <div class="images-container">
-            <img src="example1.jpg" alt="Work Example 1" class="image1">
-            <img src="example2.jpg" alt="Work Example 2" class="image2">
-            <img src="example3.jpg" alt="Work Example 3" class="image3">
-            <img src="example4.jpg" alt="Work Example 4" class="image4">
-            <img src="example5.jpg" alt="Work Example 5" class="image5">
-        </div>
+<section class="advantage-section">
+  <h2>Why Work With Me?</h2>
+  <ul>
+    <li>Proven track record of successful brand scaling</li>
+    <li>Tailored strategies to meet your specific business goals</li>
+    <li>In-depth understanding of Facebook ad algorithms and targeting</li>
+    <li>Dedicated support to ensure your campaigns run smoothly</li>
+    <li>Affordable and results-driven approach</li>
+  </ul>
+</section>
 
-        <h2>Contact Us</h2>
-        <p>If you're ready to take your brand to the next level, let’s chat! Click the button below to schedule a call or send us a message on Instagram to get started.</p>
-        <button class="cta-btn" onclick="window.location.href='https://calendly.com/your-link'">Schedule a Call</button>
-        <button class="cta-btn-instagram" onclick="window.location.href='https://instagram.com/your-username'">Message Us on Instagram</button>
-    </div>
+<section class="image-gallery">
+  <img src="your-image1.jpg" alt="Example 1">
+  <img src="your-image2.jpg" alt="Example 2">
+  <img src="your-image3.jpg" alt="Example 3">
+  <img src="your-image4.jpg" alt="Example 4">
+</section>
 
-    <footer>
-        <p>&copy; 2025 Your Brand Name. All rights reserved.</p>
-    </footer>
+<section class="cta-section">
+  <p>Ready to take your business to the next level? Choose an option below:</p>
+  <div class="schedule-call">
+    <a href="#">Schedule a Call</a>
+  </div>
+  <div class="instagram-button">
+    <a href="https://www.instagram.com/yourprofile" target="_blank">Message Me on Instagram</a>
+  </div>
+</section>
+
 </body>
 </html>
