--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Marketing Agency</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body { font-family: Arial, sans-serif; background: #0a0a0a; color: #fff; text-align: center; }
+        h1, h2 { font-size: 2.5em; }
+        p { font-size: 1.2em; }
+        .buttons { margin: 20px; }
+        .btn { padding: 15px 30px; text-decoration: none; font-size: 1.2em; border-radius: 5px; display: inline-block; transition: 0.3s ease-in-out; }
+        .blue { background: #007bff; color: white; }
+        .pink { background: #e1306c; color: white; }
+        .btn:hover { transform: scale(1.1); }
+        .features { display: flex; justify-content: center; gap: 30px; margin: 50px 0; }
+        .feature { background: #1a1a1a; padding: 20px; border-radius: 10px; width: 250px; }
+        .feature h3 { font-size: 1.5em; }
+        .feature::before { content: '\2022'; color: #007bff; font-size: 2em; display: block; }
+        .case-study { display: flex; align-items: center; justify-content: center; margin: 50px 0; gap: 20px; }
+        .case-study img { width: 40%; border-radius: 10px; }
+        .text { max-width: 40%; text-align: left; font-size: 1.5em; }
+        .reverse { flex-direction: row-reverse; }
+    </style>
 </head>
 <body>
     <header>
@@ -45,11 +62,11 @@
             </div>
         </div>
         <div class="case-study reverse">
+            <img src="example2.jpg" alt="Brand Y Result">
             <div class="text">
                 <h3>Brand Y - 3x Sales Growth in 1 Month</h3>
                 <p>Our ad strategy helped Brand Y triple their monthly sales in just 30 days.</p>
             </div>
-            <img src="example2.jpg" alt="Brand Y Result">
         </div>
     </section>
 
