--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     <section id="success-stories">
         <h2>Success Stories</h2>
         <div class="case-study">
-            <img src="image 1.jpeg" alt="Brand X Result">
+            <img src="images/image 1.jpeg" alt="Brand X Result">
             <div class="text">
                 <h3>5x ROAS in 2 Months</h3>
                 <p>We optimized their Facebook Ads, leading to a 500% increase in revenue.</p>
             </div>
         </div>
         <div class="case-study reverse">
-            <img src="image 2.jpg" alt="Brand Y Result">
+            <img src="images/image 2.jpg" alt="Brand X Result">
             <div class="text">
                 <h3>3x Sales Growth in 1 Month</h3>
                 <p>Our ad strategy helped triple monthly sales in just 30 days.</p>
