--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         .feature { background: #1a1a1a; padding: 20px; border-radius: 10px; width: 250px; }
         .feature h3 { font-size: 1.5em; }
         .feature::before { content: '\2022'; color: #007bff; font-size: 2em; display: block; }
-        .case-study { display: flex; align-items: center; justify-content: center; margin: 50px 0; gap: 20px; }
-        .case-study img { width: 40%; border-radius: 10px; }
-        .text { max-width: 40%; text-align: left; font-size: 1.5em; }
+        .case-study { display: flex; align-items: center; justify-content: center; width: 100%; margin: 50px 0; }
+        .case-study img { width: 50%; border-radius: 10px; }
+        .text { width: 50%; text-align: left; font-size: 1.5em; padding: 20px; }
         .reverse { flex-direction: row-reverse; }
     </style>
 </head>
