--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         .feature { background: #1a1a1a; padding: 20px; border-radius: 10px; width: 250px; }
         .feature h3 { font-size: 1.5em; }
         .feature::before { content: '\2022'; color: #007bff; font-size: 2em; display: block; }
-        .case-study { display: flex; align-items: center; justify-content: center; width: 100%; margin: 50px 0; }
+        .success-stories { display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; margin: 50px 0; }
+        .case-study { display: flex; align-items: center; justify-content: center; width: 80%; max-width: 1200px; margin: 20px 0; }
         .case-study img { width: 50%; border-radius: 10px; }
         .text { width: 50%; text-align: left; font-size: 1.5em; padding: 20px; }
         .reverse { flex-direction: row-reverse; }
@@ -52,7 +53,7 @@
         </div>
     </section>
 
-    <section id="success-stories">
+    <section id="success-stories" class="success-stories">
         <h2>Success Stories</h2>
         <div class="case-study">
             <img src="example1.jpg" alt="Brand X Result">
