--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="case-study reverse">
-            <img src="images/image 2.jpgg" alt="Brand X Result">
+            <img src="images/image 2.jpg" alt="Brand X Result">
             <div class="text">
                 <h3>3x Sales Growth in 1 Month</h3>
                 <p>Our ad strategy helped triple monthly sales in just 30 days.</p>
