--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Your Agency Name. All Rights Reserved.</p>
+        <p>&copy; 2025 VelBroScales. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
