--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <h1>We Scale Your Clothing Brand with Facebook Ads</h1>
         <p>Turn clicks into customers with high-converting ad strategies.</p>
         <div class="buttons">
-            <a href="#booking" class="btn blue">Book a Free Call</a>
-            <a href="https://instagram.com/youragency" class="btn pink" target="_blank">DM Us on Instagram</a>
+            <a href=calendly.com/velbroscales class="btn blue">Book a Free Call</a>
+            <a href="https://www.instagram.com/velbroscales" class="btn pink" target="_blank">DM Us on Instagram</a>
         </div>
     </header>
 
