--- a/index.html
+++ b/index.html
@@ -3,21 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Business</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; background: #0d0d0d; color: white; }
-        .container { padding: 50px; }
-        .btn { background: #007bff; color: white; padding: 15px 30px; font-size: 18px; border: none; cursor: pointer; border-radius: 5px; }
-        .btn:hover { background: #0056b3; }
-    </style>
+    <title>Brez Marketing</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <a href="#">Brez Marketing</a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <div class="container">
-        <h1>Grow Your Brand with Facebook Ads</h1>
-        <p>We help businesses scale with high-converting Facebook advertising.</p>
-        <button class="btn" onclick="window.location.href='form.html'">Apply Now</button>
-    </div>
+    <section class="hero">
+        <div class="container">
+            <h1>We Drive Growth for Your Business</h1>
+            <p>Your success is our mission. Let us help you grow.</p>
+            <a href="#" class="btn">Get Started</a>
+        </div>
+    </section>
 
+    <section class="services">
+        <div class="container">
+            <h2>Our Services</h2>
+            <div class="service-list">
+                <div class="service-item">
+                    <h3>Digital Marketing</h3>
+                    <p>We create strategies that drive results.</p>
+                </div>
+                <div class="service-item">
+                    <h3>SEO Optimization</h3>
+                    <p>Improve your search engine rankings.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Social Media Management</h3>
+                    <p>Engage your audience on social platforms.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 Brez Marketing. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
