--- a/index.html
+++ b/index.html
@@ -146,16 +146,16 @@
     <div class="success-stories">
         <h2>Success Stories</h2>
         <div class="story">
-            <img src="example1.jpg" alt="Success Story 1">
+            <img src="image1.jpeg" alt="Success Story 1">
             <div class="story-text">
-                <p>Client A achieved 3x sales growth in just one month!</p>
+                <p>3x sales growth in just one month!</p>
             </div>
         </div>
         <div class="story">
             <div class="story-text">
-                <p>Client B increased engagement by 200% in 3 weeks!</p>
+                <p>increased engagement by 200% in 3 weeks!</p>
             </div>
-            <img src="example2.jpg" alt="Success Story 2">
+            <img src="image2.jpg" alt="Success Story 2">
         </div>
     </div>
 </body>
